--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# plus
+# pip install git+https://github.com/Imageomics/pybioclip
 blinker==1.6.2
 click==8.1.6
 colorama==0.4.6
@@ -6,3 +8,5 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 Werkzeug==2.3.6
+numpy==1.26.4
+requests~=2.32.3
